--- a/package.json
+++ b/package.json
@@ -4,54 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start-dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "codeceptjs": "^2.6.10",
-    "compression-webpack-plugin": "^6.0.3",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.6.0",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "eslint": "^7.9.0",
-    "eslint-config-google": "^0.14.0",
-    "html-webpack-plugin": "^4.3.0",
-    "imagemin-webp-webpack-plugin": "^3.3.3",
-    "jasmine-ajax": "^4.0.0",
-    "jasmine-core": "^3.5.0",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mini-css-extract-plugin": "^1.1.1",
-    "puppeteer": "^5.2.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.1",
-    "sharp": "^0.26.2",
-    "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9",
-    "webpack-pwa-manifest": "^4.2.0",
-    "whatwg-fetch": "^3.2.0",
-    "workbox-webpack-plugin": "^5.1.4"
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "idb": "^5.0.6",
-    "lazysizes": "^5.2.2",
-    "regenerator-runtime": "^0.13.5"
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.0.0",
+    "regenerator-runtime": "^0.13.10"
   }
 }
