Page tentang sampah selesai , application shell selesai
Application shell dan page tentang sampah selesai , sedang menunggu landing page dari mas Fajar , sembari menunggu , saya mengerjakan bagian About us

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     "no-console": "off",
     "linebreak-style": "off",
     "no-underscore-dangle": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-trailing-spaces":"off",
+    "eol-last":"off",
+    "no-plusplus":"off"
   }
 }
