--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.0.0",
-    "regenerator-runtime": "^0.13.10"
+    "regenerator-runtime": "^0.13.10",
+    "workbox-window": "^6.5.4"
   }
 }
